<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.test.EspressoActivity">

    <TextView
        android:id="@+id/tv_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/migos_are_best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/click_test_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ClickTest"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tv_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <EditText
        app:layout_constraintTop_toBottomOf="@id/click_test_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:hint="input"
        android:id="@+id/input_text"
        android:layout_width="150dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/output_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_text"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/output_text"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/submit"
        android:layout_marginTop="20dp"
        android:text="submit input"/>
</androidx.constraintlayout.widget.ConstraintLayout>