<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MVP</string>
    <string name="migos_are_best">Migos are best</string>
    <string name="travis">Travis as well</string>
    <string name="for_real">For real</string>
</resources>